fixed a scrolling issue on the home page. Also added a margin to ensure that the content is not covered by the nav or the footer.

--- a/src/styles/layout/Layout.css
+++ b/src/styles/layout/Layout.css
@@ -1,5 +1,7 @@
 
 .layout-container {
-    width: 100vw;
-    height: 100vh;
+    margin: 7vh 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
 }
